fieldx/tests/uncompilable/1.78/serialize_off.stderr
error: feature 'sync' is required
 --> tests/uncompilable/serialize_off.rs
  |
  | #[fxstruct(sync, serde(serialize(off)))]
  |            ^^^^

error: feature 'serde' is required
 --> tests/uncompilable/serialize_off.rs
  |
  | #[fxstruct(sync, serde(serialize(off)))]
  |                  ^^^^^

error[E0432]: unresolved import `serde`
 --> tests/uncompilable/serialize_off.rs
  |
  | use serde::{Deserialize, Serialize};
  |     ^^^^^ use of undeclared crate or module `serde`

error[E0422]: cannot find struct, variant or union type `Foo` in this scope
 --> tests/uncompilable/serialize_off.rs
  |
  |     let foo = Foo { v: "whatever" };
  |               ^^^ not found in this scope
